# lvsfunc

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  aa.py  deinterlace.py  denoise.py  lvsfunc.py  mypy.ini  prek.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml  renovate.json
.github/workflows/: autotag.yml  docs.yml  lint.yml  pypipublish.yml  release.yml  renovate.json  test.yml
docs/: conf.py  index.rst  requirements.txt
docs/changelogs/: changelogs.rst
docs/getting_started/: community.rst  dependencies.rst  install.rst  primer.rst  quickstart.rst
docs/installation/: dependencies.rst  install.rst  usage.rst
docs/submodules/: aa.rst  comparison.rst  deblock.rst  dehalo.rst  dehardsub.rst  deinterlace.rst  denoise.rst  exceptions.rst  helpers.rst  kernels.rst  mask.rst  misc.rst  noise.rst  recon.rst  render.rst  scale.rst  types.rst  util.rst
lvsfunc/: __init__.py  __main__.py  _metadata.py  aa.py  color.py  comp.py  compare.py  comparison.py  deblock.py  debug.py  dehalo.py  dehardsub.py  deint.py  deinterlace.py  den.py  denoise.py  exceptions.py  export.py  fun.py  grain.py  hdcam.py  helpers.py  kernels.py  mask.py  misc.py  noise.py  presets.py  progress.py  random.py  recon.py  render.py  scale.py  scaler.py  source.py  types.py  util.py
lvsfunc/decorators/: __init__.py  clips.py
lvsfunc/dependency/: __init__.py  exceptions.py  function.py  packages.py  plugin.py  types.py
lvsfunc/diff/: __init__.py  enum.py  exceptions.py  func.py  strategies.py  types.py
lvsfunc/hdcam/: __init__.py  dering.py  priv.py
lvsfunc/models/: __init__.py  base.py  deawarp.py  delowpass.py  dempeg2.py  field_inpaint.py  np.py
lvsfunc/models/shaders/ldeawarp/: 1x_deawarp_fp32.onnx
lvsfunc/models/shaders/ldempeg2/: 1x_dempeg2_fp32.onnx
lvsfunc/models/shaders/lfieldinpaint/: 1x_field_inpaint_fp32.onnx
lvsfunc/models/shaders/lhzdelowpass/: 1x_lanczos_hz_delowpass_4_4_15_15_fp32.onnx  1x_lanczos_hz_delowpass_4_4_15_15_mpeg2_fp32.onnx
lvsfunc/ncs/: __init__.py  base.py  splice.py
lvsfunc/nn/: __init__.py  func.py  util.py
lvsfunc/packets/: __init__.py  info.py
lvsfunc/presets/: __init__.py  mv.py
lvsfunc/wobbly/: __init__.py  exceptions.py  info.py  types.py  wobbly.py
stubs/: kagefunc.pyi
stubs/cytoolz/: __init__.pyi  _signatures.pyi  _version.pyi  compatibility.pyi  dicttoolz.pyi  functoolz.pyi  itertoolz.pyi  recipes.pyi  utils.pyi  utils_test.pyi
stubs/cytoolz/curried/: __init__.pyi  exceptions.pyi  operator.pyi
stubs/debandshit/: __init__.pyi  debandshit.pyi
stubs/havsfunc/: __init__.pyi  havsfunc.pyi
stubs/kagefunc/: __init__.pyi  kagefunc.pyi
stubs/mvsfunc/: __init__.pyi  mvsfunc.pyi
stubs/pyparsedvd/: __init__.pyi  sector.pyi
stubs/pyparsedvd/vts_ifo/: __init__.pyi  load.pyi  sector_offsets.pyi  vts_pgci.pyi
stubs/vapoursynth/: __init__.pyi  stubs.pyi  vapoursynth.pyi
stubs/vsTAAmbk/: __init__.pyi  vsTAAmbk.pyi
stubs/vsdpir/: __init__.pyi  __main__.pyi  basicblock.pyi  network_unet.pyi  utils_model.pyi
stubs/vsmlrt/: __init__.pyi  vsmlrt.pyi
stubs/vsscale/: mlrt.pyi  onnx.pyi
tests/: README.md  conftest.py  test_color.py  test_comparison.py  test_lvsfunc.py  test_util.py
tests/decorators/: test_clips.py
tests/diff/: helpers.py  test_enum.py  test_func.py  test_strategies.py
tests/models/: conftest.py  test_base.py  test_inference.py
tests/presets/: test_mv.py
