[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "lvsfunc"
dynamic = ["version"]
description = "A collection of LightArrowsEXE's VapourSynth experimental functions and wrappers"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "LightArrowsEXE", email = "LightArrowsReboot@gmail.com" }]
maintainers = [
    { name = "LightArrowsEXE", email = "LightArrowsReboot@gmail.com" },
]
keywords = ["vapoursynth", "vsjetpack", "video", "encoding", "filtering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: GPU",
    # "Framework :: VapourSynth"  https://github.com/pypa/trove-classifiers/pull/240
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Display",
    "Typing :: Typed",
]
dependencies = [
    "kagefunc>=1.0.1",
    "vapoursynth>=74",
    "vsfpng>=1.2",
    "vsjetpack[denoise,scale]>=2.0.0",
    "matplotlib>=3.11.0",
]

[project.urls]
Tracker = "https://github.com/Jaded-Encoding-Thaumaturgy/lvsfunc/issues"
Contact = "https://discord.gg/XTpc6Fa9eB"
Changelog = "https://github.com/Jaded-Encoding-Thaumaturgy/lvsfunc/blob/master/CHANGELOG.md"

[project.optional-dependencies]
basic = []

# GPU-specific dependencies
cl = ["vsjetpack[cl]>=2.0.0"]
nvidia = ["vsjetpack[nvidia]>=2.0.0"]
amd = ["vsjetpack[amd]>=2.0.0"]

[tool.uv]
index-strategy = "unsafe-best-match"

[dependency-groups]
dev = [
    { include-group = "test" },
    "codespell>=2.4.2",
    "isort~=8.0.1",
    "mypy~=2.1.0",
    "poethepoet>=0.32.0",
    "prek>=0.3.12",
    "ruff~=0.15.0",
    "vsstubs>=2.1.1",
]
test = [
    "pytest>=9.0.0, <10.0.0",
    "pytest-cov>=6.2.1, <8.0.0",
    "vsjetpack[cl]>=2.0.0",      # Inference required for model tests
]

[[tool.uv.index]]
name = "vs-wheels"
url = "https://jaded-encoding-thaumaturgy.github.io/vs-wheels/simple"

[tool.hatch.build]
artifacts = ["lvsfunc/_version.py"]

[tool.hatch.build.targets.wheel]
packages = ["lvsfunc"]
include = ["lvsfunc/models/shaders/**/*.onnx"]
exclude = ["tests", "stubs"]

[tool.hatch.build.targets.sdist]
include = [
    "lvsfunc",
    "stubs",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.hatch.build.hooks.vcs]
version-file = "lvsfunc/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=lvsfunc"

# These should be removed once all the relevant deprecation warnings are fixed
filterwarnings = [
    "ignore:The _ColorRange frame property has been deprecated:DeprecationWarning",
    "ignore:Plugin .* is using API3 which is deprecated.*",
]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
files = ["lvsfunc", "tests"]
exclude_gitignore = true

# Flags changed by --strict
warn_return_any = false
extra_checks = false

# Misc
warn_unreachable = true

allow_redefinition = true
implicit_reexport = false
strict = true

show_column_numbers = true
pretty = true
color_output = true
error_summary = true
fixed_format_cache = true

[[tool.mypy.overrides]]
module = "lvsfunc.scaler"
disable_error_code = ["arg-type", "override"]

[[tool.mypy.overrides]]
module = "cytoolz.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["vsmlrt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["vsscale.*"]
follow_imports = "skip"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
exclude = ["stubs/**"]
extend-ignore = ["C408", "D100", "D107", "D301", "E226", "RUF002"]
extend-select = [
    "E",
    "C4",
    "I",
    "PYI",
    "Q",
    "SIM",
    "N",
    "W",
    "UP",
    "FURB",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"lvsfunc/**/__init__.py" = ["F401", "F403"]
"lvsfunc/models/delowpass.py" = [
    "N801", # Makes the class names too obtuse to read
]
"tests/**/__init__.py" = ["F401", "F403"]

[tool.codespell]
skip = "*.pyc,*.onnx,uv.lock,*.lock,./stubs,./.venv,./.git"
check-filenames = true

[tool.poe.tasks]
lint = { shell = "uv run vsstubs && isort . && ruff check . --fix && ruff format . && mypy . && pytest ." }
spell = { shell = "uv run codespell ." }
